# voice-assistant

./: .gitignore  README.md  pyproject.toml
tests/: repro_tts_burst.py  test_nlu.py  test_vad.py
voice_assistant/: main.py  telemetry.py
voice_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
voice_assistant/asr/: partial.py  vad.py
voice_assistant/llm/: client.py
voice_assistant/nlu/: classifier.py
voice_assistant/pipeline/: orchestrator.py
voice_assistant/transport/: grpc_client.py  grpc_server.py  webrtc.py
voice_assistant/tts/: queue.py  stream.py
